@@ -1,4 +1,7 @@
 v0.5.0, 2015-??-?? -- ???
+ * runners:
+   * All runners:
+     * removed deprecated IS_SUCCESSFUL cleanup option (use ALL)
 
 v0.4.5, 2015-??-?? -- IAM Fortified
  * runners:
